--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,18 @@
 <div class="wrapper">
-  <%= render "side_bar" %>
-  <%= render "main_chat" %>
+  <div class="side-bar">
+    <div class="side-bar-header">
+    </div>
+    <div class="rooms">
+    </div>
+    <%= render "side_bar" %>
+  </div>
+  <div class="chat">
+    <div class="chat-header">
+    </div>
+    <div class="messages">
+    </div>
+    <div class="form">
+    </div>
+    <%= render "main_chat" %>
+  </div>
 </div>
