--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,40 +1,61 @@
-.wrapper{
+.wrapper {
   display: flex;
 }
-.side-bar{
-  height: 100vw;
-  width:300px;
+.side-bar {
   background-color: #253141;
+  width: 300px;
+  height: 100vh;
 }
-.chat{
-  height: 100vw;
-  width: calc(100vw - 300px);
-  background-color: #ffffff;
+.side-bar-header {
+  height: 100px;
+  padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-name a{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+.create-room a {
+  font-size: 10px;
+  border: 1px solid lightblue;
+  padding: 14px;
+  color: deepskyblue;
+  text-decoration: none;
 }
 
-.side-bar-header{
-  height: 100px;
-  background-color: #253141;
+.rooms {
+  background-color: #2F3E51;
+  height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
 }
-.rooms{
-  height: calc(100vw - 100px);
-  background-color: #2f3e51;
-  padding: 0 20px;
+.room{
+  padding:20px 0 40px
 }
 
-.chat-header{
-  height: 100px;
+.room-name a{
+  color: white;
+  text-decoration: none;
+}
+
+.chat {
   background-color: #FFFFFF;
-  padding:0 40px;
+  width: calc(100vw - 300px);
 }
-.messages{
-  height: calc(100vw - 100px - 90px);
+.chat-header {
+  height: 100px;
+}
+.messages {
   background-color: #FAFAFA;
+  height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
 }
-.form{
-  height: 90px;
+.form {
   background-color: #DDDDDD;
+  height: 90px;
   padding: 20px 40px;
 }
